new database connection type

--- a/week10/index.html
+++ b/week10/index.html
@@ -5,6 +5,7 @@
     <title>testing week 10</title>
 </head>
 <body>
-            <h2>Hello Week 10, how has it been so far?</h2>
+<h1> Login Details </h1>
+<h2> Login Name </h2>
 </body>
 </html>
