--- a/week10/index.html
+++ b/week10/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 <h1> Login Details </h1>
-<h2> Login Name </h2>
+<h2> User Name </h2>
+<h2> First Name </h2>
+<h2> Last Name </h2>
+<h2> Date of birth </h2>
+<h2> password </h2>
+
 </body>
 </html>
