--- a/week10/index1.html
+++ b/week10/index1.html
@@ -32,5 +32,8 @@
     </div>
 </section>
 
+<p class="website">
+    &copy; 2017&ndash;2013 <a href="http://www.rgu.ac.uk" target="_blank">Thibaut Courouble</a> -
+    
 </body>
 </html>
