--- a/week10/index1.html
+++ b/week10/index1.html
@@ -33,7 +33,7 @@
 </section>
 
 <p class="website">
-    &copy; 2017&ndash;2013 <a href="http://www.rgu.ac.uk" target="_blank">Thibaut Courouble</a> -
-    
+    &copy; 2017&ndash;2018 <a href="http://www.rgu.ac.uk" target="_blank">Robert Gordon University</a>
+
 </body>
 </html>
