--- a/week10/index1.html
+++ b/week10/index1.html
@@ -32,5 +32,17 @@
 <p class="website">
     &copy; 2017&ndash;2018 <a href="http://www.rgu.ac.uk" target="_blank">Robert Gordon University</a>
 
+    form {
+    margin: 0 auto;
+    margin-top: 20px;
+    }
+    label {
+    color: #555;
+    display: inline-block;
+    margin-left: 18px;
+    padding-top: 10px;
+    font-size: 14px;
+    }
+
 </body>
 </html>
