--- a/ethics/index.html
+++ b/ethics/index.html
@@ -1,10 +1,47 @@
-input[type=submit]:hover {
-background-image: -webkit-gradient(linear, left top, left bottom, from(#b6e2ff), to(#6ec2e8));
-background-image: -moz-linear-gradient(top left 90deg, #b6e2ff 0%, #6ec2e8 100%);
-background-image: linear-gradient(top left 90deg, #b6e2ff 0%, #6ec2e8 100%);
-}
-input[type=submit]:active {
-background-image: -webkit-gradient(linear, left top, left bottom, from(#6ec2e8), to(#b6e2ff));
-background-image: -moz-linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
-background-image: linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
-}
+<!DOCTYPE html>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Login Form</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+</head>
+<body>
+<section class="container">
+    <div class="login">
+        <h1>Login to Ethics webpage</h1>
+        <form method="post" action="index.html">
+            <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
+            <p><input type="password" name="password" value="" placeholder="Password"></p>
+            <p class="remember_me">
+                <label>
+                    <input type="checkbox" name="remember_me" id="remember_me">
+                    Remember me on this computer
+                </label>
+            </p>
+            <p class="submit"><input type="submit" name="commit" value="Login"></p>
+        </form>
+    </div>
+
+    <div class="login-help">
+        <p>Forgot your password? <a href="index.html">Click here to reset it</a>.</p>
+    </div>
+</section>
+
+<p class="website">
+    &copy; 2017&ndash;2018 <a href="http://www.rgu.ac.uk" target="_blank">Robert Gordon University</a>
+
+    /* Basics */
+    html, body {
+    width: 100%;
+    height: 100%;
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    color: #444;
+    -webkit-font-smoothing: antialiased;    background: #f0f0f0;
+    }
+
+
+</body>
+</html>
+
