LOGIN AND REGISTRATION FORMS

--- a/ethics/index.html
+++ b/ethics/index.html
@@ -4,7 +4,11 @@
              <title>Login</title>
 </head>
 <body>
-<h2>Hello</h2>
+        <form>
+            <input type="text" name="username" placeholder ="Username"/>
+            <input type="password" name="password" placeholder ="Password"/>
+            <button> Log in</button>
+        </form>
 
 
 
